# picowifi

./: .gitignore  CMakeLists.txt  README.md  README.yaml  picowifi.c  reboot.py  tusb_config.h  usb_descriptors.c  usb_descriptors.h  wificred-delete-rp2350.uf2  wificred-delete.uf2  wificred-store.py  wificred.h
.github/ISSUE_TEMPLATE/: bugreport.yaml
.github/workflows/: build.yml
